'my work' section styls add basic footer layout needed.

--- a/index.html
+++ b/index.html
@@ -28,19 +28,37 @@
 
         <ol class=" .work-display-container">
             <li>
-                <img src="https://github.com/rivveneyes/social-media/blob/main/social.png?raw=true" alt="sample website">
-            <p>This will be the first tuhisd and stuff asnd thisds gnf.</p></li>
+                <span>Social site</span>
+                <a href="google.com">
+                <img src="https://github.com/rivveneyes/social-media/blob/main/social.png?raw=true" alt="sample website"> </a>
+            <p>One page site with web responsive and interactive compontents.More about it here <a href="https://github.com/rivveneyes">github</a>. </p></li>
 
             <li>
+                <span>
+                    News site
+                </span>
+                <a href="google.com">
                 <img src="https://github.com/rivveneyes/news-page/blob/main/newletter-mockup.png?raw=true" alt="sample website">
-            <p>this will be thisd dfwo dmin evr  the second one </p></li>
+            </a>
+            <p> This is a dummy news site with multiple pages. learn me here <a href="github.com">github</a>.</p></li>
             
             <!-- this will display works from git hub 2-3? -->
         </ol>
 
 </main>
 <footer>
-<div>contact form with info </div>
+<h3>Contact</h3>
+    <form action="submit">
+     <input type="text" name="" id=""> 
+     <input type="text">
+     <input type="emial"> 
+     <input type="text" name="" id=""> 
+     <button type="submit">Send</button>
+    </form>
+    <div>
+        <a href="google"><img src="imgs/fb-logo.png" alt="link to facebook"></a>
+        <a href="google"><img src="imgs/twiter-logo.png" alt="link to linkin"></a>
+    </div>
 </footer>
 </body>
 </html>
