layout for mobile. text and font size edits still needed.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <span>WEB DEVELOPER</span>
     </div>
     <main>
+
+        <div class="box-flex">
         <div class="about-me-container">
             <div>
             <h1>I'm a self taught web developer.</h1>
@@ -29,12 +31,8 @@
         <img src="imgs/joshua-protrate.jpg" alt="joshua portrate" id="portrate">           
     </div>
     <div class="skill-sett-container">
+        <span>SKILLS</span>
         <ul>
-            <!-- <li>&#60;HTML&#62; </li>
-            <li>&#60;HTML&#62; </li>
-            <li>&#60;HTML&#62; </li> -->
-
-
 
             <li>&#60;HTML&#47;&#62; </li>
         <li>&#60;CSS.scss&#47;&#62;
@@ -44,9 +42,9 @@
         <li>&#60;PHP&#47;&#62;</li>
     </ul>
     </div>
-    
+</div>
+        <div class="work-display-box">
         <h2>My Work</h2>
-
         <ol class=" .work-display-container">
             <li>
                 <span>Social site</span>
@@ -65,7 +63,7 @@
             
             <!-- this will display works from git hub 2-3? -->
         </ol>
-
+    </div>
 </main>
 <footer>
 
