site layout for mobile and pc are set. slider for night mode added. Non functional no js made yet.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="reset-style.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-breaks.css">
+    <link rel="stylesheet" href="lighting-slider.css">
     
     <title>Joshua Garcia</title>
 </head>
@@ -16,13 +17,20 @@
     <div class="header-name-display">
         <header>Joshua Garcia</header>
         <span>WEB DEVELOPER</span>
+        <div class="slider-bin">
+            <p>dark-mode</p>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
     </div>
     <main>
 
         <div class="box-flex">
         <div class="about-me-container">
             <div>
-            <h1>I'm a self taught web developer.</h1>
+            <h1>I'm self taught, allways learning this is a great passion I have and will continue to progress</h1>
             <div class="links-container">
                 <a href="https://github.com/rivveneyes" target="_blank">Github</a>
                 <a href="https://www.linkedin.com/in/joshua-garica-04351520b/" target="_blank">Linkin</a>
@@ -50,18 +58,17 @@
                 <span>Social site</span>
                 <a href="https://rivveneyes.github.io/social-media/" target="_blank">   
                 <img src="https://github.com/rivveneyes/social-media/blob/main/social.png?raw=true" alt="sample website"> </a>
-            <p>One page site with web responsive and interactive compontents.More about it here <a href="https://github.com/rivveneyes">github</a>. </p></li>
+            <p>One page site with web responsive and interactive compontents.More about it here <a href="https://github.com/rivveneyes/social-media" target="_blank">github</a>. </p></li>
 
             <li>
                 <span>
                     News site
                 </span>
-                <a href="google.com">
-                <img src="https://github.com/rivveneyes/news-page/blob/main/newletter-mockup.png?raw=true" alt="sample website">
+                <a href="https://rivveneyes.github.io/news-page/" target="_blank">
+                <img src="https://github.com/rivveneyes/news-page/blob/main/newletter-mockup.png?raw=true"  alt="sample website">
             </a>
-            <p> This is a dummy news site with multiple pages. learn me here <a href="github.com">github</a>.</p></li>
+            <p> This is a dummy news site with multiple pages. learn me here <a href="https://github.com/rivveneyes/news-page" target="_blank">github</a>.</p></li>
             
-            <!-- this will display works from git hub 2-3? -->
         </ol>
     </div>
 </main>
