--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="keywors" content="joshua garia web-development design build">
     <meta name="development" content="Personal site of joshua garcia.Display skills of web development.">
     <meta name="author" content="Joshua Garcia">
-    <link rel="stylesheet" href="reset-style.css">
+    <link rel="stylesheet" href="./styles/reset-style.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-breaks.css">
-    <link rel="stylesheet" href="lighting-slider.css">
-    
+    <link rel="stylesheet" href="./styles/lighting-slider.css">
+    <link rel="stylesheet" href="./styles/style-breaks.css">
+
+
     <title>Joshua Garcia</title>
 </head>
 <body>
@@ -20,28 +21,30 @@
         <div class="slider-bin">
             <p>dark-mode</p>
         <label class="switch">
-            <input type="checkbox">
+            <input type="checkbox" id="dark-mode">
             <span class="slider round"></span>
           </label>
         </div>
     </div>
     <main>
 
-        <div class="box-flex">
+        <div class="box-flex" id="info-skills">
         <div class="about-me-container">
             <div>
             <h1>I'm self taught, allways learning this is a great passion I have and will continue to progress</h1>
             <div class="links-container">
+                <a href="#form-bin">Contact me</a>
                 <a href="https://github.com/rivveneyes" target="_blank">Github</a>
+
                 <a href="https://www.linkedin.com/in/joshua-garica-04351520b/" target="_blank">Linkin</a>
+
             </div>
         </div>
         <img src="imgs/joshua-protrate.jpg" alt="joshua portrate" id="portrate">           
     </div>
     <div class="skill-sett-container">
         <span>SKILLS</span>
-        <ul>
-
+        <ul class="skills-list">
             <li>&#60;HTML&#47;&#62; </li>
         <li>&#60;CSS.scss&#47;&#62;
 
@@ -53,7 +56,7 @@
 </div>
         <div class="work-display-box">
         <h2>My Work</h2>
-        <ol class=" .work-display-container">
+        <ol class="work-display-container">
             <li>
                 <span>Social site</span>
                 <a href="https://rivveneyes.github.io/social-media/" target="_blank">   
@@ -73,9 +76,8 @@
     </div>
 </main>
 <footer>
-
     <h3>Contact</h3>
-    <div class="form-bin">
+    <div class="form-bin" id="form-bin">
     <span>Message Me</span>
     <form action="submit">  
         <div class="form-input-container">
@@ -99,7 +101,7 @@
 </div>
 
 </footer>
-
+<script src="./scripts.js"></script>
 
 </body>
 </html>
