links edit and ancor tags styles edit

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <h1>I'm self taught, allways learning this is a great passion I have and will continue to progress</h1>
             <div class="links-container">
                 <a href="#form-bin">Contact me</a>
-                <a href="https://github.com/rivveneyes" target="_blank">Github</a>
+                <a href="https://github.com/rivveneyes" target="_blank" rel="noopener noreferrer">Github</a>
 
-                <a href="https://www.linkedin.com/in/joshua-garica-04351520b/" target="_blank">Linkin</a>
+                <a href="https://www.linkedin.com/in/joshua-garica-04351520b/" target="_blank" rel="noopener noreferrer">Linkin</a>
 
             </div>
         </div>
@@ -59,18 +59,18 @@
         <ol class="work-display-container">
             <li>
                 <span>Social site</span>
-                <a href="https://rivveneyes.github.io/social-media/" target="_blank">   
+                <a href="https://rivveneyes.github.io/social-media/" target="_blank" rel="noopener noreferrer">   
                 <img src="https://github.com/rivveneyes/social-media/blob/main/social.png?raw=true" alt="sample website"> </a>
-            <p>One page site with web responsive and interactive compontents.More about it here <a href="https://github.com/rivveneyes/social-media" target="_blank">github</a>. </p></li>
+            <p>One page site with web responsive and interactive compontents.More about it here <a href="https://github.com/rivveneyes/social-media" target="_blank" rel="noopener noreferrer">github</a>. </p></li>
 
             <li>
                 <span>
                     News site
                 </span>
-                <a href="https://rivveneyes.github.io/news-page/" target="_blank">
+                <a href="https://rivveneyes.github.io/news-page/" target="_blank" rel="noopener noreferrer">
                 <img src="https://github.com/rivveneyes/news-page/blob/main/newletter-mockup.png?raw=true"  alt="sample website">
             </a>
-            <p> This is a dummy news site with multiple pages. learn me here <a href="https://github.com/rivveneyes/news-page" target="_blank">github</a>.</p></li>
+            <p> This is a dummy news site with multiple pages. learn me here <a href="https://github.com/rivveneyes/news-page" target="_blank" rel="noopener noreferrer">github</a>.</p></li>
             
         </ol>
     </div>
