email testing script

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="form-bin" id="form-bin">
     <span>Message Me</span>
-    <form id='form' method='post'> 
+    <form id='form' method='POST'> 
         <span class="form-notification"></span>
         <div class="form-input-container">
      <label for="first-name">First Name</label>
